--- a/templates/bmstandard/dn.yaml.j2
+++ b/templates/bmstandard/dn.yaml.j2
@@ -59,7 +59,8 @@ parameters:
     description: "Warning: Specific configuration that will be passed to bash scripts as associative array"
     type: string
     default: ''
-
+  package_config:
+    type: string
 
 resources:
 {%if create_network is equalto 1 %}
@@ -71,6 +72,16 @@ resources:
         - subnet_id: { get_param: PrivateSubnet }
       security_groups: [{ get_param: sec_group }]
 {%endif%}
+  deploy_package:
+    type: OS::Heat::SoftwareDeployment
+    properties:
+      signal_transport: { get_param: signal_transport }
+      config:
+        get_param: package_config
+      server:
+        get_resource: server
+      actions:
+        - CREATE
   install_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -91,7 +102,7 @@ resources:
   install_deployment:
     type: OS::Heat::SoftwareDeployment
 {%if create_volumes is equalto 1 %}
-    depends_on: [ volume_attachment, logvolume_attachment ]
+    depends_on: [ volume_attachment, logvolume_attachment, deploy_package ]
 {%endif%}
     properties:
       signal_transport: { get_param: signal_transport }
