--- a/templates/distribution/bastion.yaml.j2
+++ b/templates/distribution/bastion.yaml.j2
@@ -50,6 +50,8 @@ parameters:
     description: "Warning: Specific configuration that will be passed to bash scripts as associative array"
     type: string
     default: ''
+  package_config:
+    type: string
 
 resources:
 {%if create_network is equalto 1 %}
@@ -84,6 +86,17 @@ resources:
       floating_network_id: { get_param: PublicNet }
       port_id: { get_resource: port}
 {% endif %}
+  deploy_package:
+    type: OS::Heat::SoftwareDeployment
+    properties:
+      signal_transport: { get_param: signal_transport }
+      config:
+        get_param: package_config
+      server:
+        get_resource: server
+      actions:
+        - CREATE
+
   install_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -104,7 +117,7 @@ resources:
             $$SPECIFIC_CONF$$: { get_param: specific_config }
   install_deployment:
     type: OS::Heat::SoftwareDeployment
-    depends_on: bastion_deployment
+    depends_on: [ bastion_deployment, deploy_package ]
     properties:
       signal_transport: { get_param: signal_transport }
       config:
