--- a/templates/pico/pnda_cluster.yaml.j2
+++ b/templates/pico/pnda_cluster.yaml.j2
@@ -95,6 +95,8 @@ parameters:
     default: ''
   pre_config:
     type: string
+  package_config:
+    type: string
 
 resources:
 {%if create_network is equalto 1 %}
@@ -139,6 +141,7 @@ resources:
     properties:
       signal_transport: { get_param: signal_transport }
       software_config_transport: { get_param: software_config_transport }
+      package_config: { get_param: package_config }
       Flavor: { get_param: BastionFlavor }
       Image: { get_param: image_id }
       name:
@@ -171,6 +174,7 @@ resources:
           signal_transport: { get_param: signal_transport }
           software_config_transport: { get_param: software_config_transport }
           pre_config: { get_param: pre_config }
+          package_config: { get_param: package_config }
           Flavor: { get_param: KafkaFlavor }
           Image: { get_param: image_id }
           name:
@@ -198,6 +202,7 @@ resources:
       signal_transport: { get_param: signal_transport }
       software_config_transport: { get_param: software_config_transport }
       pre_config: { get_param: pre_config }
+      package_config: { get_param: package_config }
       Flavor: { get_param: Manager1Flavor }
       Image: { get_param: image_id }
       name:
@@ -223,6 +228,7 @@ resources:
       signal_transport: { get_param: signal_transport }
       software_config_transport: { get_param: software_config_transport }
       pre_config: { get_param: pre_config }
+      package_config: { get_param: package_config }
       Flavor: { get_param: EdgeFlavor }
       Image: { get_param: image_id }
       name:
@@ -252,6 +258,7 @@ resources:
           signal_transport: { get_param: signal_transport }
           software_config_transport: { get_param: software_config_transport }
           pre_config: { get_param: pre_config }
+          package_config: { get_param: package_config }
           Flavor: { get_param: DatanodeFlavor }
           Image: { get_param: image_id }
           name:
