--- a/templates/standard/dn.yaml.j2
+++ b/templates/standard/dn.yaml.j2
@@ -48,6 +48,8 @@ parameters:
     type: string
   pre_config:
     type: string
+  package_config:
+    type: string
 {%if create_datanodes_group is equalto 1 %}
   scheduler_group_hint:
     type: string
@@ -85,9 +87,20 @@ resources:
             $hdfs_volume_id$: { get_resource: volume }
             $cloudera_role$: 'DATANODE'
             $$SPECIFIC_CONF$$: { get_param: specific_config }
+  deploy_package:
+    type: OS::Heat::SoftwareDeployment
+    properties:
+      signal_transport: { get_param: signal_transport }
+      config:
+        get_param: package_config
+      server:
+        get_resource: server
+      actions:
+        - CREATE
+
   install_deployment:
     type: OS::Heat::SoftwareDeployment
-    depends_on: [ volume_attachment, logvolume_attachment ]
+    depends_on: [ deploy_package, volume_attachment, logvolume_attachment ]
     properties:
       signal_transport: { get_param: signal_transport }
       config:
