--- a/templates/standard/edge.yaml.j2
+++ b/templates/standard/edge.yaml.j2
@@ -102,7 +102,7 @@ resources:
             $log_volume_id$: { get_resource: logvolume }
 {%if package_repository_fs_type == 'local' %}
             $pr_volume_id$: { get_resource: prvolume }
-{%else%}
+{%endif%}
             $package_repository_fs_location_path$: { get_param: package_repository_fs_location_path }
             $package_repository_fs_type$: { get_param: package_repository_fs_type }
             $roles$: 'cloudera_edge,console_frontend,console_backend_data_logger,console_backend_data_manager,graphite,gobblin,deployment_manager,package_repository,data_service,impala-shell,yarn-gateway,hbase_opentsdb_tables,hdfs_cleaner,master_dataset'
