Number Kafka nodes may be increased for pico PNDA-2916

--- a/templates/pico/pnda.yaml.j2
+++ b/templates/pico/pnda.yaml.j2
@@ -99,6 +99,7 @@ resources:
       Manager1Flavor: { get_param: Manager1Flavor }
       DataNodes: { get_param: DataNodes }
       DatanodeVolumeSize : { get_param: DatanodeVolumeSize }
+      KafkaNodes: { get_param: KafkaNodes }
       signal_transport: { get_param: signal_transport }
       software_config_transport: { get_param: software_config_transport }
       pre_config: {get_resource: pre_config}
