--- a/templates/bmstandard/dn.yaml.j2
+++ b/templates/bmstandard/dn.yaml.j2
@@ -97,7 +97,7 @@ resources:
 {%if create_volumes is equalto 1 %}
             $volume_dev$: { get_param: log_mountpoint }
 {%endif%}
-            $cloudera_role$: 'DATANODE'
+            $hadoop_role$: 'DATANODE'
             $$SPECIFIC_CONF$$: { get_param: specific_config }
   install_deployment:
     type: OS::Heat::SoftwareDeployment
