--- a/templates/pico/pnda_cluster.yaml.j2
+++ b/templates/pico/pnda_cluster.yaml.j2
@@ -213,7 +213,7 @@ resources:
       Image: { get_param: image_id }
       name:
         str_replace:
-          template: '%stackname%-cdh-mgr1'
+          template: '%stackname%-hadoop-mgr1'
           params:
             '%stackname%': { get_param: deployment_name }
 {%if create_network is equalto 1 %}
@@ -239,7 +239,7 @@ resources:
       Image: { get_param: image_id }
       name:
         str_replace:
-          template: '%stackname%-cdh-edge'
+          template: '%stackname%-hadoop-edge'
           params:
             '%stackname%': { get_param: deployment_name }
 {%if create_network is equalto 1 %}
@@ -269,7 +269,7 @@ resources:
           Image: { get_param: image_id }
           name:
             str_replace:
-              template: '%stackname%-cdh-dn-%index%'
+              template: '%stackname%-hadoop-dn-%index%'
               params:
                 '%stackname%': { get_param: deployment_name }
           NodeIndex: '%index%'
