--- a/templates/standard/pnda_cluster.yaml.j2
+++ b/templates/standard/pnda_cluster.yaml.j2
@@ -400,7 +400,7 @@ resources:
       KeyName: { get_param: KeyName }
       name:
         str_replace:
-          template: '%stackname%-cdh-cm'
+          template: '%stackname%-hadoop-cm'
           params:
             '%stackname%': { get_param: deployment_name }
       PrivateNet: { get_param: private_net }
@@ -446,7 +446,7 @@ resources:
       KeyName: { get_param: KeyName }
       name:
         str_replace:
-          template: '%stackname%-cdh-jupyter'
+          template: '%stackname%-hadoop-jupyter'
           params:
             '%stackname%': { get_param: deployment_name }
       PrivateNet: { get_param: private_net }
@@ -469,7 +469,7 @@ resources:
       KeyName: { get_param: KeyName }
       name:
         str_replace:
-          template: '%stackname%-cdh-mgr1'
+          template: '%stackname%-hadoop-mgr1'
           params:
             '%stackname%': { get_param: deployment_name }
       PrivateNet: { get_param: private_net }
@@ -493,7 +493,7 @@ resources:
       KeyName: { get_param: KeyName }
       name:
         str_replace:
-          template: '%stackname%-cdh-mgr2'
+          template: '%stackname%-hadoop-mgr2'
           params:
             '%stackname%': { get_param: deployment_name }
       PrivateNet: { get_param: private_net }
@@ -517,7 +517,7 @@ resources:
       KeyName: { get_param: KeyName }
       name:
         str_replace:
-          template: '%stackname%-cdh-mgr3'
+          template: '%stackname%-hadoop-mgr3'
           params:
             '%stackname%': { get_param: deployment_name }
       PrivateNet: { get_param: private_net }
@@ -540,7 +540,7 @@ resources:
       KeyName: { get_param: KeyName }
       name:
         str_replace:
-          template: '%stackname%-cdh-mgr4'
+          template: '%stackname%-hadoop-mgr4'
           params:
             '%stackname%': { get_param: deployment_name }
       PrivateNet: { get_param: private_net }
@@ -564,7 +564,7 @@ resources:
       KeyName: { get_param: KeyName }
       name:
         str_replace:
-          template: '%stackname%-cdh-edge'
+          template: '%stackname%-hadoop-edge'
           params:
             '%stackname%': { get_param: deployment_name }
       PrivateNet: { get_param: private_net }
@@ -591,7 +591,7 @@ resources:
           KeyName: { get_param: KeyName }
           name:
             str_replace:
-              template: '%stackname%-cdh-dn-%index%'
+              template: '%stackname%-hadoop-dn-%index%'
               params:
                 '%stackname%': { get_param: deployment_name }
           NodeIndex: '%index%'
