--- a/templates/bmstandard/pnda_cluster.yaml.j2
+++ b/templates/bmstandard/pnda_cluster.yaml.j2
@@ -236,7 +236,7 @@ resources:
       KeyName: { get_param: KeyName }
       name:
         str_replace:
-          template: '%stackname%-cdh-edge'
+          template: '%stackname%-hadoop-edge'
           params:
             '%stackname%': { get_param: deployment_name }
 {%if create_network is equalto 1 %}
@@ -256,7 +256,7 @@ resources:
       KeyName: { get_param: KeyName }
       name:
         str_replace:
-          template: '%stackname%-cdh-cm'
+          template: '%stackname%-hadoop-cm'
           params:
             '%stackname%': { get_param: deployment_name }
 {%if create_network is equalto 1 %}
@@ -276,7 +276,7 @@ resources:
       KeyName: { get_param: KeyName }
       name:
         str_replace:
-          template: '%stackname%-cdh-mgr1'
+          template: '%stackname%-hadoop-mgr1'
           params:
             '%stackname%': { get_param: deployment_name }
 {%if create_network is equalto 1 %}
@@ -296,7 +296,7 @@ resources:
       KeyName: { get_param: KeyName }
       name:
         str_replace:
-          template: '%stackname%-cdh-mgr2'
+          template: '%stackname%-hadoop-mgr2'
           params:
             '%stackname%': { get_param: deployment_name }
 {%if create_network is equalto 1 %}
@@ -320,7 +320,7 @@ resources:
           KeyName: { get_param: KeyName }
           name:
             str_replace:
-              template: '%stackname%-cdh-dn-%index%'
+              template: '%stackname%-hadoop-dn-%index%'
               params:
                 '%stackname%': { get_param: deployment_name }
           NodeIndex: '%index%'
