Mandatory specification of OS user (#103)
* Mandatory specification of OS user

* Updated CHANGELOG

Also removed ENVIRONMENTS which has
falled out of date and duplicates info found
in example pnda_env.yaml

--- a/templates/pico/bastion.yaml.j2
+++ b/templates/pico/bastion.yaml.j2
@@ -53,6 +53,8 @@ parameters:
     description: URL of a mirror for operating system package download
     type: string
     default: ''
+  os_user:
+    type: string
   specific_config:
     description: "Warning: Specific configuration that will be passed to bash scripts as associative array"
     type: string
@@ -144,6 +146,7 @@ resources:
             $private_key$: { get_param: private_key }
 {%endif%}
             $keyname$: { get_param: 'OS::stack_name' }
+            $os_user$: { get_param: os_user }
             $$SPECIFIC_CONF$$: { get_param: specific_config }
   bastion_deployment:
     type: OS::Heat::SoftwareDeployment
