--- a/templates/pico/pnda_cluster.yaml.j2
+++ b/templates/pico/pnda_cluster.yaml.j2
@@ -37,6 +37,9 @@ parameters:
   image_id:
     type: string
     description: default image for pnda servers
+  os_user:
+    type: string
+    description: operating system user for provisioning
   DataNodes:
     default: '1'
     description: Number of DATA nodes
@@ -163,6 +166,7 @@ resources:
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
       PndaMirror: { get_param: PndaMirror }
+      os_user: { get_param: os_user }
       specific_config: { get_param: specific_config }
 {%endif%}
 
